Integracion Google Analytics

--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,8 @@
 <link href="css/style.css" rel="stylesheet">
 </head>
 
+<meta name="description" content="Sitio de Engage Business sobre un Theme relacionado a HTML/CSS para la clase de diseño web 1">
+<meta name="Keywords" content="contact engage business, contact engage, page contact, engage business">
 <body>
 	
 	
@@ -172,7 +174,20 @@
 		</div>
 	</footer>
 	
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	
+	
+	
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-RCR54NL82F"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-RCR54NL82F');
+	</script>
+	
+	
 </body>
 </html>
-<script src="js/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
