--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 <link href="css/bootstrap-custom.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
-	
+
+<meta name="description" content="Sitio de Engage Business sobre un Theme relacionado a HTML/CSS para la clase de diseño web 1">
+<meta name="Keywords" content="Theme business, business, Engage business, theme engage business, theme htlm, theme">
 </head>
 
 <body>
@@ -303,8 +305,15 @@
 	
 	
 	
-	
-	
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-RCR54NL82F"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-RCR54NL82F');
+	</script>
+
 	
 	
 	<script src="js/jquery.min.js"></script>
